feat(user cabinet + subscription) v0.2

--- a/src/main/resources/messages/messages_de.properties
+++ b/src/main/resources/messages/messages_de.properties
@@ -11,10 +11,10 @@ app.description=Die beste Plattform zum Deutschlernen
 nav.home=Startseite
 nav.subscriptions=Abonnements
 nav.lessons=Lektionen
-nav.lessons.plans=Unterrichtspläne
+nav.lessons.plans=Unterrichtspl\u00E4ne
 nav.lessons.tracks=Lernpfade
 nav.lessons.list=Liste der Lektionen
-nav.activities=Aktivitäten
+nav.activities=Aktivit\u00E4ten
 nav.materials=Alle Materialien
 nav.blog=Blog
 nav.test=Einstufungstest
@@ -25,16 +25,16 @@ nav.profile=Profil
 
 # Startseite
 home.hero.title=Deutsch effektiv lernen
-home.hero.subtitle=Fertige Materialien für Lehrende und Lernende
-home.hero.description=Unsere Plattform bietet eine Vielzahl von fertigen Unterrichtsplänen, Sprechaktivitäten und Grammatikspielen, die nicht nur effektiv, sondern auch ansprechend für Lernende der Stufen A1-C1 sind. Mit unseren Materialien können Sie sich auf das Wichtigste konzentrieren – das Unterrichten Ihrer Schüler!
+home.hero.subtitle=Fertige Materialien f\u00FCr Lehrende und Lernende
+home.hero.description=Unsere Plattform bietet eine Vielzahl von fertigen Unterrichtspl\u00E4nen, Sprechaktivit\u00E4ten und Grammatikspielen, die nicht nur effektiv, sondern auch ansprechend f\u00FCr Lernende der Stufen A1-C1 sind. Mit unseren Materialien k\u00F6nnen Sie sich auf das Wichtigste konzentrieren \u2013 das Unterrichten Ihrer Sch\u00FCler!
 
 # Statistiken
-home.stats.lessons=Unterrichtspläne
-home.stats.grammar=Grammatikaktivitäten
-home.stats.speaking=Sprechaktivitäten
+home.stats.lessons=Unterrichtspl\u00E4ne
+home.stats.grammar=Grammatikaktivit\u00E4ten
+home.stats.speaking=Sprechaktivit\u00E4ten
 
-# Schaltflächen
-button.all.lessons=Alle Unterrichtspläne
+# Schaltfl\u00E4chen
+button.all.lessons=Alle Unterrichtspl\u00E4ne
 button.free.materials=Kostenlose Materialien
 button.join.now=Jetzt beitreten
 button.subscribe=Abonnieren
@@ -46,18 +46,18 @@ button.load.more=Mehr laden
 section.autumn=Herbst
 section.latest=Neueste Materialien
 section.subscribe.title=Abonnieren Sie jetzt, um vollen Zugang zu unserer Sammlung an Lehrmaterialien zu erhalten!
-section.subscribe.description=Mit dem DLL Community Pro-Abonnement erhalten Sie Zugang zu einzigartigen Ressourcen für Lernende der Stufen A1-C1, einschließlich Unterrichtsplänen, Grammatikspielen, Sprechaktivitäten, thematischen Materialien für Feiertage und interaktiven Aufgaben, um Ihre Unterrichtserfahrung zu verbessern!
+section.subscribe.description=Mit dem DLL Community Pro-Abonnement erhalten Sie Zugang zu einzigartigen Ressourcen f\u00FCr Lernende der Stufen A1-C1, einschlie\u00DFlich Unterrichtspl\u00E4nen, Grammatikspielen, Sprechaktivit\u00E4ten, thematischen Materialien f\u00FCr Feiertage und interaktiven Aufgaben, um Ihre Unterrichtserfahrung zu verbessern!
 
 # Materialtypen
 material.type.lesson=Unterrichtsplan
-material.type.speaking=Sprechaktivität
-material.type.grammar=Grammatikaktivität
+material.type.speaking=Sprechaktivit\u00E4t
+material.type.grammar=Grammatikaktivit\u00E4t
 material.type.reading=Lesen
 material.type.writing=Schreiben
-material.type.listening=Hören
+material.type.listening=H\u00F6ren
 
 # Niveaus
-level.a1=A1 - Anfänger
+level.a1=A1 - Anf\u00E4nger
 level.a2=A2 - Grundlagen
 level.b1=B1 - Mittelstufe
 level.b2=B2 - Gehobene Mittelstufe
@@ -69,13 +69,13 @@ access.free=Kostenlos
 access.pro=DLL Community Pro
 access.premium=Premium
 
-# Fußzeile
+# Fu\u00DFzeile
 footer.faq=FAQ
 footer.privacy=Datenschutzrichtlinie
 footer.terms=Nutzungsbedingungen
-footer.about=Über uns
+footer.about=\u00DCber uns
 footer.contact=Kontakt
-footer.copyright=© 2025 DLL Community. Alle Rechte vorbehalten.
+footer.copyright=\u00A9 2025 DLL Community. Alle Rechte vorbehalten.
 footer.social.instagram=Instagram
 
 # Cookie-Hinweis
@@ -88,8 +88,8 @@ auth.login.title=Anmeldung
 auth.register.title=Registrierung
 auth.email=E-Mail
 auth.password=Passwort
-auth.password.confirm=Passwort bestätigen
-auth.name=Vollständiger Name
+auth.password.confirm=Passwort best\u00E4tigen
+auth.name=Vollst\u00E4ndiger Name
 auth.forgot.password=Passwort vergessen?
 auth.remember.me=Angemeldet bleiben
 auth.or.continue=oder fortfahren mit
@@ -104,22 +104,100 @@ auth.and=und
 # Auth-Nachrichten
 auth.success.register=Registrierung erfolgreich! Bitte melden Sie sich an.
 auth.success.logout=Sie wurden erfolgreich abgemeldet.
-auth.error.invalid=Ungültige E-Mail-Adresse oder Passwort
+auth.error.invalid=Ung\u00FCltige E-Mail-Adresse oder Passwort
 auth.error.oauth=OAuth-Authentifizierung fehlgeschlagen
 auth.error.email.exists=Diese E-Mail-Adresse ist bereits registriert
-auth.error.passwords.match=Die Passwörter stimmen nicht überein
+auth.error.passwords.match=Die Passw\u00F6rter stimmen nicht \u00FCberein
 
 # Validierung
 validation.required=Dieses Feld ist erforderlich
-validation.email.invalid=Ungültiges E-Mail-Format
+validation.email.invalid=Ung\u00FCltiges E-Mail-Format
 validation.password.min=Das Passwort muss mindestens {0} Zeichen lang sein
 validation.name.min=Der Name muss mindestens {0} Zeichen lang sein
-validation.name.max=Der Name darf höchstens {0} Zeichen lang sein
+validation.name.max=Der Name darf h\u00F6chstens {0} Zeichen lang sein
 
-# Passwortstärke
+# Passwortst\u00E4rke
 password.strength.weak=Schwach
 password.strength.medium=Mittel
 password.strength.good=Gut
 password.strength.excellent=Ausgezeichnet
-password.match.success=✔ Passwörter stimmen überein
-password.match.error=✘ Passwörter stimmen nicht überein
+password.match.success=\u2714 Passw\u00F6rter stimmen \u00FCberein
+password.match.error=\u2718 Passw\u00F6rter stimmen nicht \u00FCberein
+
+
+# Navigation - Cabinet
+nav.cabinet.dashboard=Mein Dashboard
+nav.cabinet.subscription=Mein Abonnement
+nav.cabinet.orders=Meine Bestellungen
+nav.cabinet.settings=Einstellungen
+nav.cabinet.active_subscription=Aktives Abonnement
+nav.cabinet.no_subscription=Kein Abonnement
+
+# Cabinet - Dashboard
+cabinet.dashboard.title=Mein Dashboard
+cabinet.dashboard.welcome=Willkommen
+cabinet.dashboard.subtitle=Verwalten Sie Ihr Konto und Abonnement
+
+# Cabinet - Subscription
+cabinet.subscription.status=Abonnementstatus
+cabinet.subscription.active=Aktives Abonnement
+cabinet.subscription.valid_until=G\u00FCltig bis
+cabinet.subscription.plan=Plan
+cabinet.subscription.manage=Abonnement verwalten
+cabinet.subscription.no_active=Sie haben kein aktives Abonnement
+cabinet.subscription.choose_plan=Plan w\u00E4hlen
+cabinet.subscription.cancel=Abonnement k\u00FCndigen
+cabinet.subscription.current=Aktuelles Abonnement
+
+# Cabinet - Quick Actions
+cabinet.quick_actions.my_lessons=Meine Lektionen
+cabinet.quick_actions.my_lessons_desc=Verf\u00FCgbare Lernmaterialien anzeigen
+cabinet.quick_actions.orders=Meine Bestellungen
+cabinet.quick_actions.orders_desc=Kauf- und Zahlungsverlauf
+cabinet.quick_actions.settings=Einstellungen
+cabinet.quick_actions.settings_desc=Verwalten Sie Ihr Profil
+
+# Cabinet - Statistics
+cabinet.statistics.title=Statistiken
+cabinet.statistics.lessons_accessed=Lektionen angesehen
+cabinet.statistics.materials_downloaded=Materialien heruntergeladen
+cabinet.statistics.member_since=Mitglied seit
+
+# Cabinet - Orders
+cabinet.orders.title=Bestellverlauf
+cabinet.orders.empty=Sie haben noch keine Bestellungen
+cabinet.orders.order=Bestellung
+cabinet.orders.view_details=Details anzeigen
+
+# Subscription - Plans
+subscription.plans.title=W\u00E4hlen Sie Ihren Plan
+subscription.plans.subtitle=Erhalten Sie Zugriff auf alle Lernmaterialien
+subscription.available_plans=Verf\u00FCgbare Pl\u00E4ne
+subscription.recommended=Empfohlen
+subscription.days=Tage
+subscription.buy=Abonnement kaufen
+subscription.choose_plan=Plan w\u00E4hlen
+subscription.questions=Haben Sie Fragen?
+subscription.contact=Kontaktieren Sie uns
+
+# Subscription - Features
+subscription.feature.all_lessons=Zugang zu allen Lektionen
+subscription.feature.download=Materialien herunterladen
+subscription.feature.updates=Neue Materialien
+
+# Subscription - Success
+subscription.success.title=Zahlung erfolgreich!
+subscription.success.subtitle=Vielen Dank f\u00FCr Ihr Abonnement
+subscription.success.order_details=Bestelldetails
+subscription.success.order_number=Bestellnummer
+subscription.success.date=Datum
+subscription.success.amount=Betrag
+subscription.success.status=Status
+subscription.success.completed=Abgeschlossen
+subscription.success.subscription_details=Ihr Abonnement
+subscription.success.plan=Plan
+subscription.success.valid_from=G\u00FCltig ab
+subscription.success.valid_until=G\u00FCltig bis
+subscription.success.go_to_cabinet=Zum Dashboard
+subscription.success.view_lessons=Lektionen anzeigen
+subscription.success.email_sent=Eine Best\u00E4tigungs-E-Mail wurde an Ihre E-Mail-Adresse gesendet
