--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -123,3 +123,82 @@ password.strength.good=Good
 password.strength.excellent=Excellent
 password.match.success=? Passwords match
 password.match.error=? Passwords do not match
+
+
+
+# Navigation - Cabinet
+nav.cabinet.dashboard=My Dashboard
+nav.cabinet.subscription=My Subscription
+nav.cabinet.orders=My Orders
+nav.cabinet.settings=Settings
+nav.cabinet.active_subscription=Active Subscription
+nav.cabinet.no_subscription=No Subscription
+
+# Cabinet - Dashboard
+cabinet.dashboard.title=My Dashboard
+cabinet.dashboard.welcome=Welcome
+cabinet.dashboard.subtitle=Manage your account and subscription
+
+# Cabinet - Subscription
+cabinet.subscription.status=Subscription Status
+cabinet.subscription.active=Active Subscription
+cabinet.subscription.valid_until=Valid Until
+cabinet.subscription.plan=Plan
+cabinet.subscription.manage=Manage Subscription
+cabinet.subscription.no_active=You don't have an active subscription
+cabinet.subscription.choose_plan=Choose a Plan
+cabinet.subscription.cancel=Cancel Subscription
+cabinet.subscription.current=Current Subscription
+
+# Cabinet - Quick Actions
+cabinet.quick_actions.my_lessons=My Lessons
+cabinet.quick_actions.my_lessons_desc=View available learning materials
+cabinet.quick_actions.orders=My Orders
+cabinet.quick_actions.orders_desc=Purchase and payment history
+cabinet.quick_actions.settings=Settings
+cabinet.quick_actions.settings_desc=Manage your profile
+
+# Cabinet - Statistics
+cabinet.statistics.title=Statistics
+cabinet.statistics.lessons_accessed=Lessons Viewed
+cabinet.statistics.materials_downloaded=Materials Downloaded
+cabinet.statistics.member_since=Member Since
+
+# Cabinet - Orders
+cabinet.orders.title=Order History
+cabinet.orders.empty=You don't have any orders yet
+cabinet.orders.order=Order
+cabinet.orders.view_details=View Details
+
+# Subscription - Plans
+subscription.plans.title=Choose Your Plan
+subscription.plans.subtitle=Get access to all learning materials
+subscription.available_plans=Available Plans
+subscription.recommended=Recommended
+subscription.days=days
+subscription.buy=Buy Subscription
+subscription.choose_plan=Choose Plan
+subscription.questions=Have questions?
+subscription.contact=Contact us
+
+# Subscription - Features
+subscription.feature.all_lessons=Access to all lessons
+subscription.feature.download=Download materials
+subscription.feature.updates=New materials
+
+# Subscription - Success
+subscription.success.title=Payment Successful!
+subscription.success.subtitle=Thank you for your subscription
+subscription.success.order_details=Order Details
+subscription.success.order_number=Order Number
+subscription.success.date=Date
+subscription.success.amount=Amount
+subscription.success.status=Status
+subscription.success.completed=Completed
+subscription.success.subscription_details=Your Subscription
+subscription.success.plan=Plan
+subscription.success.valid_from=Valid From
+subscription.success.valid_until=Valid Until
+subscription.success.go_to_cabinet=Go to Dashboard
+subscription.success.view_lessons=View Lessons
+subscription.success.email_sent=Confirmation email has been sent to your email address
