change user cabinet

--- a/src/main/resources/messages/messages_de.properties
+++ b/src/main/resources/messages/messages_de.properties
@@ -201,3 +201,63 @@ subscription.success.valid_until=G\u00FCltig bis
 subscription.success.go_to_cabinet=Zum Dashboard
 subscription.success.view_lessons=Lektionen anzeigen
 subscription.success.email_sent=Eine Best\u00E4tigungs-E-Mail wurde an Ihre E-Mail-Adresse gesendet
+
+
+# ========================================
+# Benutzereinstellungen - Deutsch
+# ========================================
+
+# Einstellungen - Allgemein
+cabinet.settings.title=Profileinstellungen
+cabinet.settings.subtitle=Verwalten Sie Ihr Profil und Ihre Kontoeinstellungen
+cabinet.settings.saved=\u00C4nderungen erfolgreich gespeichert
+cabinet.settings.error=Fehler beim Speichern der Einstellungen
+cabinet.settings.save=\u00C4nderungen speichern
+
+# Navigation
+cabinet.settings.profile=Profil
+cabinet.settings.security=Sicherheit
+cabinet.settings.preferences=Einstellungen
+cabinet.settings.danger_zone=Gefahrenzone
+
+# Profil
+cabinet.settings.profile_info=Profilinformationen
+cabinet.settings.name=Name
+cabinet.settings.name.placeholder=Geben Sie Ihren Namen ein
+cabinet.settings.email=E-Mail
+cabinet.settings.email.readonly=E-Mail kann nicht ge\u00E4ndert werden
+cabinet.settings.member_since=Mitglied seit
+
+# Sicherheit
+cabinet.settings.change_password=Passwort \u00E4ndern
+cabinet.settings.current_password=Aktuelles Passwort
+cabinet.settings.new_password=Neues Passwort
+cabinet.settings.confirm_password=Neues Passwort best\u00E4tigen
+cabinet.settings.password.requirements=Mindestens 8 Zeichen
+cabinet.settings.password.mismatch=Passw\u00F6rter stimmen nicht \u00FCberein
+cabinet.settings.password.too_short=Passwort muss mindestens 8 Zeichen enthalten
+cabinet.settings.oauth_account_prefix=Sie sind angemeldet \u00FCber
+cabinet.settings.oauth_password=Passwort\u00E4nderung ist nur f\u00FCr passwortbasierte Konten verf\u00FCgbar
+
+# Einstellungen
+cabinet.settings.language=Oberfl\u00E4chensprache
+cabinet.settings.theme=Oberfl\u00E4chenthema
+cabinet.settings.notifications=E-Mail-Benachrichtigungen
+cabinet.settings.email_notifications=Neuigkeiten und Updates erhalten
+
+# Sprachen
+language.ukrainian=\u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
+language.english=English
+language.german=Deutsch
+
+# Themes
+theme.light=Hell
+theme.dark=Dunkel
+theme.auto=Automatisch
+
+# Kontol\u00F6schung
+cabinet.settings.delete_warning=Das L\u00F6schen Ihres Kontos ist unwiderruflich. Alle Ihre Daten werden dauerhaft gel\u00F6scht.
+cabinet.settings.delete_account=Konto l\u00F6schen
+cabinet.settings.delete_confirm=Sind Sie sicher, dass Sie Ihr Konto l\u00F6schen m\u00F6chten? Diese Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.\n\nGeben Sie "DELETE" zur Best\u00E4tigung ein:
+cabinet.settings.account_deleted=Konto gel\u00F6scht
+cabinet.settings.delete_error=Fehler beim L\u00F6schen des Kontos
