--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -75,7 +75,7 @@ footer.privacy=Privacy Policy
 footer.terms=Terms of Use
 footer.about=About Us
 footer.contact=Contact Us
-footer.copyright=© 2025 DLL Community. All rights reserved.
+footer.copyright=\uFFFD 2025 DLL Community. All rights reserved.
 footer.social.instagram=Instagram
 
 # Cookie Notice
@@ -202,3 +202,63 @@ subscription.success.valid_until=Valid Until
 subscription.success.go_to_cabinet=Go to Dashboard
 subscription.success.view_lessons=View Lessons
 subscription.success.email_sent=Confirmation email has been sent to your email address
+
+
+# ========================================
+# User Settings - English
+# ========================================
+
+# Settings - General
+cabinet.settings.title=Profile Settings
+cabinet.settings.subtitle=Manage your profile and account settings
+cabinet.settings.saved=Changes saved successfully
+cabinet.settings.error=Error saving settings
+cabinet.settings.save=Save Changes
+
+# Navigation
+cabinet.settings.profile=Profile
+cabinet.settings.security=Security
+cabinet.settings.preferences=Preferences
+cabinet.settings.danger_zone=Danger Zone
+
+# Profile
+cabinet.settings.profile_info=Profile Information
+cabinet.settings.name=Name
+cabinet.settings.name.placeholder=Enter your name
+cabinet.settings.email=Email
+cabinet.settings.email.readonly=Email cannot be changed
+cabinet.settings.member_since=Member since
+
+# Security
+cabinet.settings.change_password=Change Password
+cabinet.settings.current_password=Current Password
+cabinet.settings.new_password=New Password
+cabinet.settings.confirm_password=Confirm New Password
+cabinet.settings.password.requirements=Minimum 8 characters
+cabinet.settings.password.mismatch=Passwords do not match
+cabinet.settings.password.too_short=Password must contain at least 8 characters
+cabinet.settings.oauth_account_prefix=You are logged in via
+cabinet.settings.oauth_password=Password change is only available for password-based accounts
+
+# Preferences
+cabinet.settings.language=Interface Language
+cabinet.settings.theme=Interface Theme
+cabinet.settings.notifications=Email Notifications
+cabinet.settings.email_notifications=Receive news and updates
+
+# Languages
+language.ukrainian=\u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
+language.english=English
+language.german=Deutsch
+
+# Themes
+theme.light=Light
+theme.dark=Dark
+theme.auto=Auto
+
+# Account Deletion
+cabinet.settings.delete_warning=Deleting your account is irreversible. All your data will be permanently deleted.
+cabinet.settings.delete_account=Delete Account
+cabinet.settings.delete_confirm=Are you sure you want to delete your account? This action cannot be undone.\n\nType "DELETE" to confirm:
+cabinet.settings.account_deleted=Account deleted
+cabinet.settings.delete_error=Error deleting account
